--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,7 +18,7 @@
         rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/LunarLogic/starability/starability-all.min.css">
 
-    <link href="/css/rating.css" rel="stylesheet" />
+    <link href="/CSS/rating.css" rel="stylesheet" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.14.0/mapbox-gl.js"></script>
 </head>
